--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --color-white: #fff;
+  --color-black: #313131;
+  --color-green: #9bcc50;
+  --color-purple: #b97fc9;
+  --color-orange: #fd7d24;
+  --color-blue: #4592c4;
+}
+
+.bg {
+  &-white {
+      background-color: var(--color-white);
+      color: var(--color-black)
+  }
+
+    &-black {
+      background-color: var(--color-black);
+      color: var(--color-white)
+    }
+
+  &-green {
+    background-color: var(--color-green);
+    color: var(--color-black)
+  }
+
+  &-purple {
+    background-color: var(--color-purple);
+    color: var(--color-white)
+  }
+
+  &-orange {
+    background-color: var(--color-orange);
+    color: var(--color-white)
+  }
+
+  &-blue {
+    background-color: var(--color-blue);
+    color: var(--color-white)
+  }
+}
+
+.btn {
+  &-small {
+    padding: .125rem 1.25rem;
+    border-radius: 4px;
+    font-size: 12px;
+
+    font-weight: 500;
+  }
+}
+
+
+.container {
+  width: clamp(350px, 100%, 1200px);
+  margin: 0 auto;
+}
