--- a/src/app/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemon-card/pokemon-card.component.html
@@ -1,20 +1,21 @@
 <div class="pokemon-card">
   <div class="pokemon-card-image">
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Polemon Image"/>
+    <img [src]="pokemon.image" alt="Polemon Image"/>
   </div>
 
   <div class="pokemon-card-title">
     <div class="pokemon-card-number">
-      N°001
+      N° {{ leadingZero(pokemon.number) }}
     </div>
 
     <div class="pokemon-card-name">
-      Bulbasaur
+      {{ pokemon.name }}
     </div>
   </div>
 
   <div class="pokemon-card-types">
-    <div class="pokemon-card-type-grass bg-green btn-small">Grass</div>
-    <div class="pokemon-card-type-poison btn-small bg-purple">Poison</div>
+    <div class="btn-small"
+    *ngFor="let type of pokemon.types"
+    [class]="'pokemon-card-type-'+ type.toLowerCase()">{{ type }}</div>
   </div>
 </div>
