--- a/src/app/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokemon-card/pokemon-card.component.scss
@@ -1,3 +1,4 @@
+
 .pokemon-card {
   font-family: "Signika", arial, sans-serif;
   width: 100%;
@@ -40,4 +41,17 @@
     justify-items: flex-start;
     gap: .25rem;
   }
+
+  .pokemon-card-type{
+      &-grass {
+       color: var(--color-black);
+       background-color: var(--color-green);
+
+      }
+
+      &-poison {
+        background-color: var(--color-purple);
+        color: var(--color-white);
+      }
+    }
 }
