--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Signika:wght@400500;700&display=swap');
+@import 'colors';
 
 * {
   margin: 0;
@@ -16,37 +17,68 @@
   --color-blue: #4592c4;
 }
 
-.bg {
-  &-white {
-      background-color: var(--color-white);
-      color: var(--color-black)
-  }
+$bg-colors: 'white', 'black', 'green', 'purple', 'orange', 'blue';
 
-    &-black {
-      background-color: var(--color-black);
-      color: var(--color-white)
+$white: --color-white;
+$black: --color-black;
+$green: --color-green;
+$purple: --color-purple;
+$orange: --color-orange;
+$blue: --color-blue;
+
+@function bgColor($value) {
+
+    @if $bg-color =='white' or $bg-color =='green' {
+      @return(
+        color: var(--color-black)
+      );
     }
 
-  &-green {
-    background-color: var(--color-green);
-    color: var(--color-black)
-  }
+    @if $bg-color =='black' {
 
-  &-purple {
-    background-color: var(--color-purple);
-    color: var(--color-white)
-  }
+      @return (
+        color: var(--color-white)
+        )
+    }
 
-  &-orange {
-    background-color: var(--color-orange);
-    color: var(--color-white)
-  }
+    @else {
+      @return (
+      color: var(--color-white)
+      )
+    }
 
-  &-blue {
-    background-color: var(--color-blue);
-    color: var(--color-white)
+    @return(
+      background-color: var(--color-#{$bg-color})
+    )
+
+}
+
+@export 'bgColor';
+
+@mixin bg {
+  .bg {
+    @each $bg-color in $bg-colors {
+      &-#{$bg-color} {
+        background-color: var(--color-#{$bg-color});
+        @if $bg-color == 'white' {
+          color: var(--color-black);
+        }
+        @if $bg-color == 'black' {
+          color: var(--color-white);
+        }
+        @if $bg-color == 'green' {
+          color: var(--color-black);
+        }
+
+        @else {
+          color: var(--color-white);
+        }
+      }
+    }
   }
 }
+
+@include bg;
 
 .btn {
   &-small {
